implemented the secondPriceAuctionStratgy